fix: Center banner title text on mobile

--- a/week1/css/all.css
+++ b/week1/css/all.css
@@ -395,6 +395,10 @@ nav ul.nav_menu {
   padding-left: 10px;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .bg-banner {
   background-color: #ddeef8;
 }
