--- a/week1/scss/_layout.scss
+++ b/week1/scss/_layout.scss
@@ -130,6 +130,11 @@
   padding-left: 10px;
 }
 
+// TEXT ALIGN
+.text-center {
+  text-align: center;
+}
+
 // BACKGROUND
 .bg-banner {
   background-color: #ddeef8;
